--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
+# sever port설정
+server.port=8080
+
 # H2 설정
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
 # Datasource 설정
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
 spring.datasource.username=sa
 spring.datasource.password=
+
 # sql 보기
 spring.jpa.show_sql = true
+
 # h2 문법을 mysql로 변경
 spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
 
+# SQL encoding 설정
 spring.datasource.sql-script-encoding=UTF-8
 
 # 하이버네이트 설정
@@ -23,11 +30,14 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialec
 spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
+# 하이퍼네이크 SQL log 설정
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
-server.port=8080
-
-spring.main.allow-bean-definition-overriding=true
+# thymeleaf 설정
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.name=thymeleaf/*
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
