refator - ShortKey를 이용해서 페이지 이동개발을 위한 리팩토링

--- a/build.gradle
+++ b/build.gradle
@@ -94,3 +94,7 @@ compileQuerydsl{
 configurations {
 	querydsl.extendsFrom compileClasspath
 }
+
+
+apply plugin: 'application'
+mainClassName = 'com.urlshortener.UrlShortenerApplication'
