--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,13 @@ server.port=8080
 
 # H2 설정
 spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
 
 # Datasource 설정
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+spring.datasource.hikari.jdbc-url=jdbc:h2:mem:testdb;MODE=MYSQL
 spring.datasource.username=sa
 spring.datasource.password=
 
@@ -17,7 +19,6 @@ spring.datasource.password=
 spring.jpa.show_sql = true
 
 # h2 문법을 mysql로 변경
-spring.datasource.hikari.jdbc-url=jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
 
 # SQL encoding 설정
 spring.datasource.sql-script-encoding=UTF-8
